--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,5 +1,5 @@
 PORT= 8000
-DB_URL= "mongodb+srv://shanmugapriyab211:shanmuga%402006@cluster0.nf2jr.mongodb.net/db?retryWrites=true&w=majority&appName=Cluster0"
+DB_URL= "mongodb+srv://joelharriss69:joel2006@cluster1.kdouk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1"
 JWT_SECRET_ = "randomtoken1234567890"
 JWT_EXPIRE = 7d
 ACTIVATION_SECRET = kjjklhfasdn*&%$%^JHG
